# PPPM-TDBEM

./: .gitignore  CMakeLists.txt  README.md  main.cu  note.md  pull.sh  push.sh
assets/: scene.cfg
assets/cup-phone/phone/: motion.txt  selected_vertices.txt
dataset/bowl/: setting.cfg
experiments/: CMakeLists.txt  pipeline.ipynb  pybullet+fem.ipynb
experiments/VibraFace/: comparision.ipynb  comparision.py  main.cu
experiments/WavConvert/: convert.ipynb
experiments/acoustic/: main.cu  preprocess.ipynb  run.sh  test.py
experiments/demo/: audio_convert.py  check.ipynb  main.cu  run.sh
experiments/ghost_rigidbody/: check.ipynb  debug.ipynb  main.cu  render.blend
experiments/modal_analysis/: pybullet+fem.ipynb
experiments/plane/: main.cu
experiments/pppm_objectCollection/: check.ipynb  main.cu  run.sh
experiments/pppm_rigidbody/: check.ipynb  main.cu  main2.cu  render.blend
experiments/rigidbody/: check.ipynb  debug.ipynb  main.cu
experiments/sphere/: analysis.ipynb  comparision.ipynb  main.cu
experiments/static/: comparision.ipynb  comparision.py  main.cu  run.sh  test.py
experiments/teaser/: main.cu
experiments/test/: Plot.py
experiments/test/Longtime/: test.ipynb
libs/: CMakeLists.txt
notes/: FaceCache.ipynb  Formula_for_FDTD.md  LocalCorrection.ipynb  PPPMTest.ipynb  TDBEM.ipynb  fdtd_bem_plot.ipynb  ghost_cell.ipynb  laplace_transform.ipynb  matrix.txt  near-far.md  particle_dirichlet_plot.ipynb  plot.ipynb  pppm.md  pppm_dynamic_plot.ipynb  pppm_plot.ipynb  svd.ipynb
python_scripts/: audio.py  bem.py  blender_loader.py  fem.py  fix_mesh.py  physical.py  visulize.py
src/algorithm/: CMakeLists.txt  bem.h  fdtd.cu  fdtd.h  ghost_cell.cu  ghost_cell.h  ghost_cell_util.cu  ghost_cell_util.h  morton.h  particle_grid.cu  particle_grid.h  pppm.cu  pppm.h  pppm_cache.cu  pppm_cache.h  pppm_direct.cu  pppm_direct.h  pppm_kernel.h  sparse.cu  sparse.h  svd.cu  svd.h
src/core/: array.h  array.inl  array2D.h  array3D.h  helper_math.h  macro.h  objIO.h  objIO.inl
src/helmholtz/: integrand.h  potential.h
src/helmholtz/gauss/: triangle.h
src/ui/: CMakeLists.txt  gui.cu  gui.h  imgui.ini  window.cu  window.h
src/utils/: CMakeLists.txt  Object.cu  Object.h  ObjectCollection.cu  ObjectCollection.h  RigidBody.cu  RigidBody.h  Rigidbody.cu  Water.h  array_writer.h  material.h  objIO.cu  objIO.h  progressbar.h  progressbar.hpp  simple_json_reader.h  sound_source.h  tiny_obj_loader.h  visualize.cu  visualize.h
tests/: CMakeLists.txt  CellClassificationTest.cu  CusparseTest.cu  ErrorCorrectionTest.cu  FDTDPMLTest.cu  FDTDTest.cu  FFTTest.cu  FaceCacheTest.cu  FarFieldCacheTest.cu  FarFieldTest.cu  FastCacheTest.cu  FreshCellTest.cu  GhostCellTest.cu  GridCacheTest.cu  LocalCorrectionTest.cu  LongTimeFDTDTest.cu  PPPMDynamicTest.cu  PPPMTest.cu  ParticleCacheTest.cu  ParticleGridTest.cu  RigidBodyTest.cu  SVDTest.cu  TDBEMTest.cu  UITest.cu  case_generator.h
